--- a/studentPage.html
+++ b/studentPage.html
@@ -20,6 +20,12 @@
       color: gold;
     }
 
+    img{
+      width: 100%;
+      max-width: 1200px; /* Optional maximum width */
+      margin: 0 auto; /* Center the container */
+    }
+
     .hero {
       background: linear-gradient(to bottom right, #000, teal);
       color: white;
