--- a/thankyou.html
+++ b/thankyou.html
@@ -14,6 +14,12 @@
       text-align: center;
     }
 
+    img{
+      width: 100%;
+      max-width: 1200px; /* Optional maximum width */
+      margin: 0 auto; /* Center the container */
+    }
+
     .thanks{
         color:teal;
         font-size:xx-large;
