--- a/Elandingpage.html
+++ b/Elandingpage.html
@@ -13,6 +13,12 @@
       color: black;
     }
 
+    img{
+      width: 100%;
+      max-width: 1200px; /* Optional maximum width */
+      margin: 0 auto; /* Center the container */
+    }
+
     .main-logo {
       max-width: 180px;
       margin-bottom: 20px;
