--- a/studentPage.html
+++ b/studentPage.html
@@ -119,7 +119,7 @@
     </div>
     <br>
     <br>
-    <p>Learn local languages through fun, video sessions, AI-powered tools and global cultural connection.</p>
+    <p>Learn local languages through fun, video sessions and global cultural connection.</p>
     <a href="Elandingpage.html" class="btn btn-gold mt-4">Get Started Free</a>
   </header>
 
@@ -158,24 +158,24 @@
         </div>
         <div class="col-md-4">
           <div class="pricing-card border-warning">
-            <h4 class="text-warning">Premium - $70/mo</h4>
+            <h4 class="text-warning">Gold - $45/mo</h4>
             <ul>
-              <li>All Free tier and Golden plan features</li>
-              <li>Unlimited group sessions</li>
-              <li>Unlimited private video sessions/mo</li>
-              <li>AI-powered recommendations</li>
-              <li>Location-based suggestions</li>
-              <li>Chat with students & teachers</li>
+              <li>All Free tier plan features</li>
+              <li>+5 group sessions</li>
+              <li>3 private video sessions with native teacher</li>
             </ul>
           </div>
         </div>
         <div class="col-md-4">
           <div class="pricing-card border-gold">
-            <h4 class="text-gold">Golden - $40/mo</h4>
+            <h4 class="text-gold">Premium - $70/mo</h4>
             <ul>
-              <li>All Free tier plan features</li>
-              <li>+5 group sessions per month/li>
-              <li>Advanced AI and messaging</li>
+             <li>All Free tier and Golden plan features</li>
+              <li>Unlimited group sessions</li>
+              <li>Unlimited private video sessions/mo</li>
+              <li>AI-powered recommendations</li>
+              <li>Location-based suggestions</li>
+              <li>Chat with students & teachers</li>
             </ul>
           </div>
         </div>
