--- a/survey.html
+++ b/survey.html
@@ -73,8 +73,15 @@
         <label class="form-label">5. What plan are you most interested in?</label>
         <div>
           <input type="radio" name="plan" value="Free"> Free<br>
-          <input type="radio" name="plan" value="Premium"> Premium (70$)<br>
-          <input type="radio" name="plan" value="Golden"> Golden (40)<br>
+          <input type="radio" name="plan" value="Premium"> Golden (45$)<br>
+          <input type="radio" name="plan" value="Golden"> Premium (70)<br>
+        </div>
+      </div>
+
+      <div class="question">
+        <label class="form-label">5. What is the higest amount of money you are willing to pay for using the app?</label>
+        <div>
+          <input type="number" name="plan" required><br>
         </div>
       </div>
 
