--- a/survey.html
+++ b/survey.html
@@ -74,14 +74,14 @@
         <div>
           <input type="radio" name="plan" value="Free"> Free<br>
           <input type="radio" name="plan" value="Premium"> Golden (45$)<br>
-          <input type="radio" name="plan" value="Golden"> Premium (70)<br>
+          <input type="radio" name="plan" value="Golden"> Premium (70$)<br>
         </div>
       </div>
 
       <div class="question">
         <label class="form-label">5. What is the higest amount of money you are willing to pay for using the app?</label>
         <div>
-          <input type="number" name="plan" required><br>
+          <input type="number" name="plan" required>$<br>
         </div>
       </div>
 
